# unitree_lidar_project

./: .clang-format  .editorconfig  .gitignore  CODEOWNERS  README.md  conda_requirements.yaml  docker-run.sh  pip_requirements.txt  pytest.ini  restructure_proposal.md  setup.sh
RPI5/: .gitignore  README.md  SYSTEM_GUIDE.md  SYSTEM_SUMMARY.md  install_launch_files.sh  run_photogrammetry.sh  unitree_lidar_L1  verify_system.sh
RPI5/ros2_ws/src/insta360_photogrammetry/: CMakeLists.txt  package.xml
RPI5/ros2_ws/src/insta360_photogrammetry/launch/: photogrammetry.launch.py
RPI5/ros2_ws/src/insta360_photogrammetry/scripts/: photogrammetry_capture.py
Tests/: test_insta360.sh  test_photogrammetry.sh  view_insta360_live.py
docker/: Dockerfile  docker-compose.yml  docker-run.sh
docs/: CLAUDE.md  architecture.md  calibration.md  calibration_guide.md  flight_procedure.md  hardware_setup.md  led_controller_document.py  pipeline_overview.md  post_processing.md  project_status.md  ros_graph.md  test_order.md  test_procedure.md  texture_pipeline.md  watchdog_report.md
rpi_server/: drone-mesh-server.service  hotspot_watchdog.py  meshview-telemetry.service  meshview.html  meshview_telemetry_server.py  rpi-health.service  rpi_health_node.py  serve.py  setup_foxglove_service.sh  setup_hotspot_service.sh  setup_mesh_server_service.sh  start_rpi_health.sh
scripts/: build_ws.sh  record_bag.sh  save_pointcloud.sh  source_ws.sh  start.sh
setup_scripts/: install_foxglove_agent.sh  preflight_check.sh  setup.sh  setup_foxglove_service.sh  setup_hotspot_service.sh  (+4 more)
(+107 files in other folders)
